# relevant-reviews

./: .gitignore  README.md  rr
app/: index.html  package.json
app/src/: App.tsx  styles.css  types.ts  utils.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: bedrock.rs  commands.rs  config.rs  fetch.rs  github.rs  lib.rs  main.rs  pr_parser.rs  prompts.rs  types.rs
app/src/components/: CommentsViewer.tsx  DiffViewer.tsx  FileSidebar.tsx  Header.tsx  LoadingView.tsx  PrOpener.tsx  ReviewRequestList.tsx  SearchBar.tsx  SettingsModal.tsx  SummaryParagraphs.tsx
